cluster/base/invval/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invval
  namespace: invval
  labels:
    app: invval
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: invval
  template:
    metadata:
      labels:
        app: invval
    spec:
      containers:
      - name: invval
        image: dzahariev/invval:4.1
        ports:
        - containerPort: 8080
          name: http
