cluster/base/invval/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invval
  namespace: invval
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: invval.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invval
            port:
              number: 8080
  tls:
  - hosts:
    - invval.example.com
    secretName: invval-tls
